 -- Added HASQUOTA(). Patch from Jake.
 -- Added @list guests which tracks guest characters. Zenty patch. Rhost idea.
 -- Added SITEMON flag to track connections and disconnections from site.
    Patch from Zenty.
 -- Added MARKER0 through MARKER9 flagnames. They are accessible as flag
    letters '0' through '9' when WOD_REALMS is not defined, but only by name
    if WOD_REALMS is defined.

Bug Fixes:
~~~~~~~~~
 -- inet_addr() re-write to handle netmask of 255.255.255.255 and Berkeley
    a, a.b, and a.b.c numeric IP formats.
 -- article_rule wasn't parsed correctly, and art() always returned 'a'.
 -- @cboot would SIGSEGV on @cset/anon channels.
 -- Documented comtitle/{on,off}.
 -- Typo bug in RADIX_COMPRESSION build.
 -- Short version string contained 'Alpha' instead of 'Beta'.
 -- Several semaphores waiting on the same object/attr could be @notified
    out of order.
 -- Channel messages are considered OOC.
 -- Bug #662 - SIGSEGV in @dbck.
 -- Bug #618 - Logic in new_home enables being inside a garbage object.
 -- Bug #424 - Linking deposit refund. Patch from Jake.
 -- Bug #585 - Parent isn't cleared during @destroy process. Patch from Jake.
 -- Bug #765 - whispering to objects with ears should still be allowed.
 -- Document safer_passwords configuration option.
 -- Bug #602 - fun_ansi reaches backwards into the buffer.
 -- Bug #391 - WIZARD player could set attributes on garbage objects.
 -- Fixed SIZEOF__LONG typo in code that would be very unlikely to affect any
    platform.
 -- Added optional 4th argument (indent) to COLUMNS().
 -- Removed unintialized have_macros config option. Could have been an
    issue if you were running a non-DEBUG build and wanted to disable the
    comsys.
 -- Fixed SIGBUS issue on Solaris. This was not an issue for MUX 2.0.
    Thanks to nails for providing a Solaris test account.
 -- Fixed SIGSEGV bug in timeutil with how the timezone offset table was
    maintained. It required three things to happen at the same time.